Release v8.0.1, Upgrade node & npm to latest LTS versions (#511)
* #143 Upgrade node & npm to latest LTS versions

Now using node v22.20.0 (npm 11.6.2)

* Update package-lock.json

* Update node.js.yml

* Update node.js.yml

* Update npm-publish-packages.yml

* Update package-lock.json

* Bump org.apache.tomcat.embed:tomcat-embed-jasper from 11.0.12 to 11.0.13 (#510)

Bumps org.apache.tomcat.embed:tomcat-embed-jasper from 11.0.12 to 11.0.13.

---
updated-dependencies:
- dependency-name: org.apache.tomcat.embed:tomcat-embed-jasper
  dependency-version: 11.0.13
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump io.swagger.core.v3:swagger-annotations from 2.2.38 to 2.2.39 (#509)

Bumps io.swagger.core.v3:swagger-annotations from 2.2.38 to 2.2.39.

---
updated-dependencies:
- dependency-name: io.swagger.core.v3:swagger-annotations
  dependency-version: 2.2.39
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump software.amazon.awssdk:aws-sdk-java from 2.35.5 to 2.35.10 (#508)

Bumps software.amazon.awssdk:aws-sdk-java from 2.35.5 to 2.35.10.

---
updated-dependencies:
- dependency-name: software.amazon.awssdk:aws-sdk-java
  dependency-version: 2.35.10
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* Bump selenium.vers from 4.36.0 to 4.37.0 (#507)

Bumps `selenium.vers` from 4.36.0 to 4.37.0.

Updates `org.seleniumhq.selenium:selenium-java` from 4.36.0 to 4.37.0
- [Release notes](https://github.com/SeleniumHQ/selenium/releases)
- [Commits](https://gith